--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div class="postcard">
+			Hello
 			<div class="postcard-header">
 				<h1>My Postcard</h1>
 				<img
@@ -20,13 +21,13 @@
 					<p>This is so cool, can't wait to starting doing more stuff!</p>
 				</div>
 				<div class="body-right">
-					<input type="text" placeholder="Kristhiam" />
-					<input type="text" placeholder="akabrice@adresscode.com" /> <input type="text" placeholder="New Year, New Life" />
+					<p>Addressed to:</p>
+					<p>John Doe</p>
+					<p>1234 Main St.</p>
+					<p>Springfield, USA</p>
 				</div>
 			</div>
-			<div class="postcard-footer">
-				<button>Send My Postcard</button>
-			</div>
+			<div class="postcard-footer"></div>
 		</div>
 	</body>
 </html>
