--- a/.learn/resets/13-check-your-code/index.html
+++ b/.learn/resets/13-check-your-code/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div class="postcard">
+			Hello
 			<div class="postcard-header">
 				<h1>My Postcard</h1>
 				<img
@@ -20,8 +21,9 @@
 					<p>This is so cool, can't wait to starting doing more stuff!</p>
 				</div>
 				<div class="body-right">
-					<input type="text" placeholder="Kristhiam" />
-					<input type="text" placeholder="akabrice@adresscode.com" /> <input type="text" placeholder="New Year, New Life" />
+					<p>Kristhiam</p>
+					<p>akabrice@adresscode.com</p>
+					<p>New Year, New Life or New Code</p>
 				</div>
 			</div>
 			<div class="postcard-footer">
